--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_secure_storage: ^4.2.1
   provider: ^6.0.1
+  awesome_snackbar_content: ^0.1.3
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
