--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   provider: ^6.0.1
   awesome_snackbar_content: ^0.1.3
+  get_it: ^7.2.0
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
