--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider: ^6.0.1
   awesome_snackbar_content: ^0.1.3
   get_it: ^7.2.0
+  google_nav_bar: ^5.0.3
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
