--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   get_it: ^7.2.0
   google_nav_bar: ^5.0.3
+  cached_network_image: ^3.0.0
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
