--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_it: ^7.2.0
   google_nav_bar: ^5.0.3
   cached_network_image: ^3.0.0
+  url_launcher: ^6.2.4
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
