--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,15 @@ environment:
 dependencies:
   http: ^1.1.2
   flutter_dotenv: ^5.0.2
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.0.0
   provider: ^6.0.1
   awesome_snackbar_content: ^0.1.3
   get_it: ^7.2.0
   google_nav_bar: ^5.0.3
   cached_network_image: ^3.0.0
   url_launcher: ^6.2.4
+  firebase_messaging: ^14.7.15
+  firebase_core: ^2.25.4
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
