--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 migrate_working_dir/
 
 .env
+lib/firebase_options.dart
+
+android/app/google-services.json
+ios/firebase_app_id_file.json
 
 # IntelliJ related
 *.iml
